# celine-regorus

./: Dockerfile  LICENSE  README.md  dump.yaml  main.py  pyproject.toml  taskfile.yaml
.github/workflows/: build-publish.yml
celine_regorus_builder/: build.py  cli.py  github.py  pypi.py  stubgen_rust.py  versions.py  wheel.py
stubs/: README.dist.md  regorus-v0.5.0.pyi  regorus-v0.9.1.pyi
